<resources xmlns:tools="http://schemas.android.com/tools">
    <!--General-->
    <string name="app_name">UCE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="progress_popup_progress">Progress</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_popup_title">Delete</string>
    <string name="zip_download_completed">Download completed, unpacking</string>
    <string name="zip_unpack_completed">Unpacking completed</string>
    <string name="zip_unpacking_failed">Unpacking failed</string>
    <string name="download_failed">Download failed</string>
    <string name="location_unavailable">Location not available</string>

...
    <string name="fieldbook_addpin_button_description">Button for adding new fieldbook pin</string>
    <string name="fieldbook_topbar_title">My Fieldbook</string>
    <string name="fieldbook_mediaselection_failed">Failed to select media</string>

    <!--Editor-->
    <string name="editor_topbar_title">Edit pins</string>
    <string name="editor_delete_block">Delete</string>
    <string name="editor_cancel_edit">Cancel</string>
    <string name="editor_edit_block">Edit</string>
    <string name="editor_edit_popup_title">Change content</string>
    <string name="editor_moveup">Move up</string>
    <string name="editor_movedown">Move down</string>
    <string name="editor_imageselection_gallery">Choose from gallery</string>
    <string name="editor_imageselection_camera">Take Photo</string>
    <string name="editor_imageselection_popup_title">Add an image</string>
    <string name="editor_videoselection_gallery">Choose from gallery</string>
    <string name="editor_videoselection_camera">Record Video</string>
    <string name="editor_videoselection_popup_title">Add a video</string>

    <!--Menu-->
    <string name="menu_bar_placeholder_text">Menu Item</string>
    <string name="menu_bar_backbutton_description">Back Button</string>
    <string name="menu_allpins_button_text">Pins</string>
...
