<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryDarkRef"
    android:gravity="center"
    tools:ignore="Overdraw">

...
        app:layout_constraintBottom_toTopOf="@+id/sepparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sprite_complete" />

    <TextView
        android:id="@+id/popup_window_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="bottom|start"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textColor="@color/TextGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/popup_window_edit_button"
        app:layout_constraintStart_toEndOf="@+id/completed_marker"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_window_edit_button"
        style="?android:attr/borderlessButtonStyle"
...
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_border"
            app:layout_constraintBottom_toTopOf="@+id/popup_window_close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/scrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
...
